# mavlink-interface

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  attitude_controller.cpp  attitude_controller.h  main.cpp  mavlink_udp.cpp  mavlink_udp_example.cpp  msg_queue.h  multithreaded_interface.cpp  multithreaded_interface.h  position_controller.cpp  position_controller.h  serial_port.cpp  serial_port.h  vector3.cpp  vector3.h
include/: msg_queue.h  multithreaded_interface.h  position_control_helper.h  position_controller.h  serial_port.h  udp_device.h
mavlink_c_library_v2/ardupilotmega/: ardupilotmega.h  mavlink.h  mavlink_msg_control_gains.h  mavlink_msg_control_targets.h  mavlink_msg_set_control_gains.h  mavlink_msg_set_target_ned.h  mavlink_msg_target_ned.h  mavlink_msg_vision_position_delta.h  testsuite.h  version.h
mavlink_c_library_v2/common/: common.h  mavlink.h  mavlink_msg_camera_tracking_image_status.h  mavlink_msg_command_ack.h  mavlink_msg_component_information.h  mavlink_msg_efi_status.h  mavlink_msg_gps2_raw.h  mavlink_msg_gps_input.h  mavlink_msg_hil_gps.h  mavlink_msg_param_ext_ack_trimmed.h  mavlink_msg_param_ext_request_list.h  mavlink_msg_param_ext_request_read.h  mavlink_msg_param_ext_set_trimmed.h  mavlink_msg_param_ext_value_trimmed.h  mavlink_msg_rc_channels_override.h  mavlink_msg_smart_battery_info.h  version.h
mavlink_c_library_v2/icarous/: icarous.h  mavlink.h  version.h
mavlink_c_library_v2/minimal/: mavlink.h  minimal.h  version.h
mavlink_c_library_v2/uAvionix/: mavlink.h  uAvionix.h  version.h
src/: multithreaded_interface.cpp  position_controller.cpp  serial_port.cpp
